Scipy/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Scipy
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=d8c61e222f4ba64330302d4a18f3179584a79bb06abe30e4
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=d8c61e222f4ba64330302d4a18f3179584a79bb06abe30e4
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Assignment_01.ipynb is not trusted
[NotebookApp | INFO] Kernel started: f4351a52-ea82-42bd-ac59-8d5861f64bba
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel f4351a52-ea82-42bd-ac59-8d5861f64bba
[NotebookApp | INFO] Saving file at /Assignment_01.ipynb
[NotebookApp | INFO] Saving file at /Assignment_01.ipynb
[NotebookApp | INFO] Saving file at /Assignment_01.ipynb
[NotebookApp | INFO] Saving file at /Assignment_01.ipynb
[NotebookApp | INFO] Saving file at /Assignment_01.ipynb
[NotebookApp | INFO] Starting buffering for f4351a52-ea82-42bd-ac59-8d5861f64bba:a104f6f3801b4a8f9e7d753f2125a339
[NotebookApp | WARNING] Notebook Assignment_02.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 1ddb7f37-429c-4351-be3f-2c265718b71d
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 1ddb7f37-429c-4351-be3f-2c265718b71d
[NotebookApp | INFO] Saving file at /Assignment_02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02.ipynb
[NotebookApp | INFO] Starting buffering for 1ddb7f37-429c-4351-be3f-2c265718b71d:c6f8df816d3949838b63e0b88a12244f
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 2 kernels
[NotebookApp | INFO] Kernel shutdown: f4351a52-ea82-42bd-ac59-8d5861f64bba
[NotebookApp | INFO] Kernel shutdown: 1ddb7f37-429c-4351-be3f-2c265718b71d
